--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   supabase_flutter: ^2.12.0
   flutter_dotenv: ^6.0.0
   flutter_riverpod: ^3.2.0
+  fluttertoast: ^8.2.4
+  uuid: ^4.5.2
+
 
 dev_dependencies:
   flutter_test:
